crates/cuda-device/tests/compile_fail/thread_index_1d_u32_wrong_domain.stderr
error[E0308]: mismatched types
  --> tests/compile_fail/thread_index_1d_u32_wrong_domain.rs:11:38
   |
11 |     let _ = __internal::index_1d_u32(launch_context);
   |             ------------------------ ^^^^^^^^^^^^^^ expected `&LaunchContext<'_, Domain1, ...>`, found `&LaunchContext<'_, Domain2, ...>`
   |             |
   |             arguments to this function are incorrect
   |
   = note: expected reference `&cuda_device::LaunchContext<'_, cuda_device::__internal::Domain1, cuda_device::__internal::U32Coordinates>`
              found reference `&'kernel cuda_device::LaunchContext<'kernel, cuda_device::__internal::Domain2, cuda_device::__internal::U32Coordinates>`
note: function defined here
  --> src/thread.rs
   |
   |     pub fn index_1d_u32<'kernel>(
   |            ^^^^^^^^^^^^
